css stying on section part

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
                             <li>
                               
-                                    <i class="fa-solid fa-m"></i>
+                                    <i class="fa-brands fa-m"></i>
                                 </a>
                             </li>
 
