reduce margin top on background selector

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header>
       <nav>
           <ul class="logo-part">
-              <li class="logo-link"><a href="#">My Logo</a></li>
+              <li class="logo-link">My Logo</li>
           </ul>
           
 
