changes on logo from ul to div

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
   <header>
       <nav>
-          <ul class="logo-part">
-              <li class="logo-link">My Logo</li>
-          </ul>
+          <div class="logo-part">
+              <h4 class="logo-text">My Logo</h4>
+          </div>
           
 
               <ul class="hamburgur">
