--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-  rel="stylesheet"
-/>
+  rel="stylesheet"/>
 </head>
 <body>
   <header>
@@ -82,6 +81,170 @@
               </div>
           </div>
       </div>
+  </section>
+
+  <section class="container">
+    <div class="card">
+      <img src="/images/image-1.png" alt="" class="image">
+      <div class="left-card1-block">
+        <h1 class="project-title">Tonic</h1>
+        <!-- Flex -->
+        <ul class="project-badges">
+          <li class="text-1">Canopy</li>
+          <img src="/images/counter-images.png" alt="" class="counter-image">
+          <li class="text-2">
+            <p>Back&nbspEnd&nbspDev</p>
+          </li>
+          <img src="/images/counter-images.png" alt="" class="counter-image">
+          <li class="text-3">2015</li>
+        </ul>
+
+        <p class="project-description">
+          A daily selection of privately personalized reads; no accounts or sign-ups required.
+        </p>
+        <br>
+        <ul class="language-categories">
+          <!-- Flex -->
+          <li>html</li>
+          <li>css</li>
+          <li>javascript</li>
+        </ul>
+        <button class="submit-btn" type="submit">See Project</button>
+      </div>
+
+    </div>
+    <!-- <div class="card2"></div> -->
+    </div>
+
+    <div class="card">
+      <img src="/images/image-2.png" alt="" class="image">
+      <div class="left-card1-block">
+        <h1 class="project-title">Tonic</h1>
+        <!-- Flex -->
+        <ul class="project-badges">
+          <li class="text-1">Canopy</li>
+          <img src="/images/counter-images.png" alt="" class="counter-image">
+          <li class="text-2">
+            <p>Back&nbspEnd&nbspDev</p>
+          </li>
+          <img src="/images/counter-images.png" alt="" class="counter-image">
+          <li class="text-3">2015</li>
+        </ul>
+
+        <p class="project-description">
+          A daily selection of privately personalized reads; no accounts or sign-ups required.
+        </p>
+        <br>
+        <ul class="language-categories">
+          <!-- Flex -->
+          <li>html</li>
+          <li>css</li>
+          <li>javascript</li>
+        </ul>
+        <button class="submit-btn" type="submit">See Project</button>
+      </div>
+
+    </div>
+
+    </div>
+
+    <div class="card">
+      <img src="/images/image-3.png" alt="" class="image">
+      <div class="left-card1-block">
+        <h1 class="project-title">Tonic</h1>
+        <!-- Flex -->
+        <ul class="project-badges">
+          <li class="text-1">Canopy</li>
+          <img src="/images/counter-images.png" alt="" class="counter-image">
+          <li class="text-2">
+            <p>Back&nbspEnd&nbspDev</p>
+          </li>
+          <img src="/images/counter-images.png" alt="" class="counter-image">
+          <li class="text-3">2015</li>
+        </ul>
+
+        <p class="project-description">
+          A daily selection of privately personalized reads; no accounts or sign-ups required.
+        </p>
+        <br>
+        <ul class="language-categories">
+          <!-- Flex -->
+          <li>html</li>
+          <li>css</li>
+          <li>javascript</li>
+        </ul>
+        <button class="submit-btn" type="submit">See Project</button>
+      </div>
+
+    </div>
+    <!-- <div class="card2"></div> -->
+    </div>
+
+    <div class="card">
+      <img src="/images/image-4.png" alt="" class="image">
+      <div class="left-card1-block">
+        <h1 class="project-title">Tonic</h1>
+        <!-- Flex -->
+        <ul class="project-badges">
+          <li class="text-1">Canopy</li>
+          <img src="/images/counter-images.png" alt="" class="counter-image">
+          <li class="text-2">
+            <p>Back&nbspEnd&nbspDev</p>
+          </li>
+          <img src="/images/counter-images.png" alt="" class="counter-image">
+          <li class="text-3">2015</li>
+        </ul>
+
+        <p class="project-description">
+          A daily selection of privately personalized reads; no accounts or sign-ups required.
+        </p>
+        <br>
+        <ul class="language-categories">
+          <!-- Flex -->
+          <li>html</li>
+          <li>css</li>
+          <li>javascript</li>
+        </ul>
+        <button class="submit-btn" type="submit">See Project</button>
+      </div>
+
+    </div>
+
+    </div>
+  </section>
+
+  <section class="container-about">
+    <div class="card">
+      <div class="title-about">
+        <h1>
+          About
+          <br>
+          Myself
+        </h1>
+      </div>
+
+      <div class="myself-text">
+        <p class="description">Hello I’m a software developer! I can help you build a product , feature or website Look
+          through some of my work and experience! If you like what you see and have a project you need coded, don’t
+          hestiate to contact me.</p>
+      </div>
+
+      <div class="social">
+        <h2 class="connection">LET'S CONNECT</h2>
+        <ul class="media-icons">
+          <li><i class="fa-brands fa-twitter"></i></li>
+
+          <li><i class="fa-brands fa-linkedin"></i></li>
+
+          <li><i class="fa-brands fa-m"></i></li>
+
+          <li><i class="fa-brands fa-github"></i></li>
+
+          <li> <i class="fa-solid fa-hand-peace"></i></li>
+        </ul>
+      </div>
+      <button class="submit-btn" type="submit">Get My Resume</button>
+    </div>
   </section>
 
 </body>
