styling the media icons and about me section

--- a/index.html
+++ b/index.html
@@ -229,21 +229,17 @@
           hestiate to contact me.</p>
       </div>
 
-      <div class="social">
-        <h2 class="connection">LET'S CONNECT</h2>
-        <ul class="media-icons">
-          <li><i class="fa-brands fa-twitter"></i></li>
-
-          <li><i class="fa-brands fa-linkedin"></i></li>
-
-          <li><i class="fa-brands fa-m"></i></li>
-
+      <div class="social-about">
+        <h2 class="connection-about">LET'S CONNECT</h2>
+        <ul class="media-icons-about">
           <li><i class="fa-brands fa-github"></i></li>
-
+          <li><i class="fa-brands fa-linkedin"></i></li>
           <li> <i class="fa-solid fa-hand-peace"></i></li>
+          <li><i class="fa-brands fa-twitter"></i></li>
+          <li><i class="fa-brands fa-m"></i></li>
         </ul>
       </div>
-      <button class="submit-btn" type="submit">Get My Resume</button>
+      <button class="about-submit-btn" type="submit"><a href="#">Get my resume</a></button>
     </div>
   </section>
 
