--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
   </section>
 
   <section class="container-about">
-    <div class="card">
+    <div class="card-about">
       <div class="title-about">
         <h1>
           About
@@ -240,6 +240,28 @@
         </ul>
       </div>
       <button class="about-submit-btn" type="submit"><a href="#">Get my resume</a></button>
+    </div>
+
+    <div class="lang">
+      <div class="title"> <h3>Languages</h3> </div>
+      <div class="lang-list">
+        <ul class="three-lang">
+          <li>
+            <img src="/images/js.png" alt="js" class="images-lang">
+          </li>
+          <h3>javascript</h3>
+        </ul>
+        <li>
+          <img src="/images/html.png" alt="html" class="images-lang">
+        </li>
+        <h3>HTML</h3>
+      </ul>
+      <li>
+        <img src="/images/css.png" alt="css" class="images-lang">
+      </li>
+      <h3>CSS</h3>
+    </ul>
+      </div>
     </div>
   </section>
 
