changed image path to suggested one

--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
       <img src="/images/image-1.png" alt="" class="image">
       <div class="left-card1-block">
         <h1 class="project-title">Tonic</h1>
-        <!-- Flex -->
+        
         <ul class="project-badges">
           <li class="text-1">Canopy</li>
-          <img src="/images/counter-images.png" alt="" class="counter-image">
+          <img src="./images/counter-images.png" alt="" class="counter-image">
           <li class="text-2">
             <p>Back&nbspEnd&nbspDev</p>
           </li>
-          <img src="/images/counter-images.png" alt="" class="counter-image">
+          <img src="./images/counter-images.png" alt="" class="counter-image">
           <li class="text-3">2015</li>
         </ul>
 
