changes on contact form

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
     </div>
 
     <div class="contanct-containter">
-      <div class="contact-info">
+      <footer class="contact-info">
         <div class="backgound-image"></div>
 
           <div class="contact-title">
@@ -300,17 +300,17 @@
           </div>
           <div class="contact-form">
             <form action="action_page">
-              <input type="text" id="fname" name="firstname" placeholder="Yeremias">
+              <input type="text" class="label" name="firstname" placeholder="Yeremias" maxlength="30" required>
 
-              <input type="text" id="email" name="email" placeholder="natajayanji4@gmail.com">
+              <input type="email" class="label" id="email" name="email" placeholder="natajayanji4@gmail.com"  required>
 
-              <textarea id="subject" name="subject" placeholder="Write your message here" style="height:200px"  ></textarea>
+              <textarea class="text-area" id="subject" name="subject" placeholder="Write your message here"  maxlength="500"></textarea>
               <button class="submit-btn2">Get it Touch</button>
             </form>
           <img src="./images/Shape.svg" class="img-form">
         
       </div>
-    </div>
+    </footer >
   </section>
 
 
