--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             </p>
           </div>
           <div class="contact-form">
-            <form action="action_page">
+            <form class="action-form" action="action_page">
               <input type="text" class="label" name="firstname" placeholder="Yeremias" maxlength="30" required>
 
               <input type="email" class="label" id="email" name="email" placeholder="natajayanji4@gmail.com"  required>
