--- a/index.html
+++ b/index.html
@@ -299,8 +299,8 @@
             </p>
           </div>
           <div class="contact-form">
-            <form class="action-form" action="action_page">
-              <input type="text" class="label" name="firstname" placeholder="Yeremias" maxlength="30" required>
+            <form class="action-form" action="https://formspree.io/f/{form_id}" method="post">
+              <input type="text" class="label" id="name" name="firstname" placeholder="Yeremias" maxlength="30" required>
 
               <input type="email" class="label" id="email" name="email" placeholder="natajayanji4@gmail.com"  required>
 
