added styling on about me section

--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
   </section>
 
   <section class="container-about">
+    <div class="cardabout-skill">
     <div class="card-about">
       <div class="title-about">
         <h1>
@@ -263,6 +264,7 @@
     <div class="lang">
       <div class="title-about">
         <h3 class="about-lang">Languages</h3>
+        <img src="./images/down-arrow.png" alt="" class="down-arrow">
       </div>
       <div class="lang-list">
         <div class="display-flex">
@@ -303,6 +305,8 @@
       </ul>
 
     </div>
+    </div>
+</section>
 
     <div class="contanct-containter">
       <footer class="contact-info">
@@ -330,7 +334,7 @@
         
       </div>
     </footer >
-  </section>
+ 
 
 
 
