changed stying on mobile version

--- a/index.html
+++ b/index.html
@@ -205,22 +205,22 @@
       <img src="./images/image-4.png" alt="" class="image">
       <div class="left-card1-block">
         <h1 class="project-title mobile">Multi-Post <br> Stories</h1>
-        <h1 class="project-title">Uber <br> Navigation</h1>
+        <h1 class="project-title desktop">Uber <br> Navigation</h1>
         
         <ul class="project-badges">
           <li class="text-1 dektop">Canopy</li>
-          <li class="text-1">Uber</li>
+          <li class="text-1 desktop">Uber</li>
           <img src="./images/counter-images.png" alt="" class="counter-image">
           <li class="text-2 desktop">
             <p>Back&nbspEnd&nbspDev</p>
           </li>
-          <li class="text-2">
+          <li class="text-2 mobile">
             <p>Lead&nbspDeveloper</p>
           </li>
 
           <img src="./images/counter-images.png" alt="" class="counter-image">
           <li class="text-3 year">2015</li>
-          <li class="text-3">2018</li>
+          <li class="text-3 years">2018</li>
 
         </ul>
 
