added styling on css file.

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
     </div>
 </section>
 
-    <div class="contanct-containter">
+    <div class="contanct-containter ">
       <footer class="contact-info">
         <div class="backgound-image">
           <div class="contact-title">
@@ -335,9 +335,9 @@
             <div class="contact-form">
               <form class="action-form" action="https://formspree.io/f/{form_id}" method="post">
                 <input type="text" class="label first" id="name" name="firstname" placeholder="Yeremias" maxlength="30" required>
-                <input type="text" class="label" id="name" name="firstname" placeholder="Alexandra Loremipsum" maxlength="30" required>
+                <input type="text" class="label desktop" id="name" name="firstname" placeholder="Alexandra Loremipsum" maxlength="30" required>
                 <input type="email" class="label email" id="email" name="email" placeholder="natajayanji4@gmail.com"  required>
-                <input type="email" class="label" id="email" name="email" placeholder="alexandra@gmail.com"  required>
+                <input type="email" class="label desktop" id="email" name="email" placeholder="alexandra@gmail.com"  required>
 
                 <textarea class="text-area" id="subject" name="subject" placeholder="Write your message here"  maxlength="500" required ></textarea>
                 <button class="submit-btn2">Get it Touch</button>
