fixed desktop contactme form

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/desktop-styling.css">
+  <link rel="stylesheet" href="css/mobile.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet" />
 </head>
 
@@ -236,16 +237,16 @@
       <img src="./images/image-4.png" alt="" class="image">
       <div class="left-card1-block">
         <h1 class="project-title mobile">Multi-Post <br> Stories</h1>
-        <h1 class="project-title desktop">Uber <br> Navigation</h1>
+        <h1 class="project-title desktop">Uber Navigation</h1>
         
         <ul class="project-badges">
           <li class="text-1 dektop">Canopy</li>
           <li class="text-1 desktop">Uber</li>
           <img src="./images/counter-images.png" alt="" class="counter-image">
-          <li class="text-2 desktop">
-            <p>Back&nbspEnd&nbspDev</p>
-          </li>
           <li class="text-2 mobile">
+            Back&nbspEnd&nbspDev
+          </li>
+          <li class="text-2 desktop">
             <p>Lead&nbspDeveloper</p>
           </li>
 
