--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <p class="project-description mobile2">
           A daily selection of privately personalized reads; no accounts or sign-ups required.
         </p>
-        <p class="project-description desktop2">
+        <p class="project-description desktop2 text">
           Experimental content creation feature that allows users to add to an existing story over the course of a day without spamming their friends.
         </p>
 
