added background conrast colors

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <li class="left-nav-link"> <a href="#">My Logo</a></li>
           </div>
           <div class="right">
-            <li class="nav-links"> <a href="#">Portfolio</a></li>
-            <li class="nav-links"> <a href="#">About</a></li>
-            <li class="nav-links"> <a href="#">Contact</a></li>
+            <li class="nav-links"> <a href="#portfolio">Portfolio</a></li>
+            <li class="nav-links"> <a href="#Aboutme">About</a></li>
+            <li class="nav-links"> <a href="#Contactme">Contact</a></li>
           </div>
           
         </ul>
@@ -41,7 +41,7 @@
     </nav>
   </header>
 
-  <section class="main">
+  <section class="main" id="portfolio">
     <div class="background">
       <div class="wrapper">
         <div class="intro-text">
@@ -62,35 +62,11 @@
           <div class="social">
             <h2 class="connection">LET'S CONNECT</h2>
             <ul class="media-icons">
-              <li>
-
-                <i class="fa-brands fa-twitter"></i>
-
-              </li>
-
-              <li>
-
-                <i class="fa-brands fa-linkedin"></i>
-
-              </li>
-
-              <li>
-
-                <i class="fa-brands fa-m"></i>
-
-              </li>
-
-              <li>
-
-                <i class="fa-brands fa-github"></i>
-
-              </li>
-
-              <li>
-
-                <i class="fa-solid fa-hand-peace"></i>
-
-              </li>
+              <li>  <i class="fa-brands fa-twitter"></i></li>
+              <li><i class="fa-brands fa-linkedin"></i></li>
+              <li><i class="fa-brands fa-m"></i></li>
+              <li><i class="fa-brands fa-github"></i></li>
+              <li><i class="fa-solid fa-hand-peace"></i></li>
             </ul>
           </div>
        
@@ -278,7 +254,7 @@
     </div>
   </section>
 
-  <section class="container-about">
+  <section class="container-about" id="Aboutme">
     <div class="cardabout-skill">
     <div class="card-about">
       <div class="title-about">
@@ -355,7 +331,7 @@
     </div>
 </section>
 
-    <section class="contanct-containter">
+    <section class="contanct-containter" id="Contactme">
       <footer class="contact-info">
         <div class="backgound-image mobile"></div>
         <div class="backgound-image desktop"></div>
@@ -365,7 +341,7 @@
             If you have an application you are interested in developing, a feature that you need built or a project that
             needs coding. I’d love to help with it
             </p>
-            <div class="contact-form">
+            <div class="contact-form" >
               <form class="action-form" action="https://formspree.io/f/{form_id}" method="post">
                 <input type="text" class="label first" id="name" name="firstname" placeholder="Yeremias" maxlength="30" required>
                 <input type="text" class="label desktop" id="name" name="firstname" placeholder="Alexandra Loremipsum" maxlength="30" required>
