added clickable links to section

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
   <section class="container">
     <div class="card">
-      <img src="./images/image-1.png" alt="" class="image">
+      <img src="./images/image-1.png" alt="Image" class="image">
       <img src="./images/desktop-image1.png" alt="" class="desktop-image1">
 
       <div class="left-card1-block one">
