fixed interaction accessibility

--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
         </div>
 
           <div class="social">
-            <h2 class="connection">LET'S CONNECT</h2>
+            <a href="#"><h2 class="connection">LET'S CONNECT</h2></a> 
             <ul class="media-icons">
-              <li>  <i class="fa-brands fa-twitter"></i></li>
-              <li><i class="fa-brands fa-linkedin"></i></li>
-              <li><i class="fa-brands fa-m"></i></li>
-              <li><i class="fa-brands fa-github"></i></li>
-              <li><i class="fa-solid fa-hand-peace"></i></li>
+              <li><a href="#"><i class="fa-brands fa-twitter"></i></a>  </li>
+              <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+              <li><a href="#"><i class="fa-brands fa-m"></i></a></li>
+              <li><a href="#"><i class="fa-brands fa-github"></i></a> </li>
+              <li><a href="#"> <i class="fa-solid fa-hand-peace"></i></a></li>
             </ul>
           </div>
        
@@ -272,13 +272,13 @@
       </div>
 
       <div class="social-about">
-        <h2 class="connection-about">LET'S CONNECT</h2>
+        <a href="#"><h2 class="connection-about">LET'S CONNECT</h2></a>
         <ul class="media-icons-about">
-          <li><i class="fa-brands fa-github"></i></li>
-          <li><i class="fa-brands fa-linkedin"></i></li>
-          <li> <i class="fa-solid fa-hand-peace"></i></li>
-          <li><i class="fa-brands fa-twitter"></i></li>
-          <li><i class="fa-brands fa-m"></i></li>
+          <li><a href="#"><i class="fa-brands fa-twitter"></i></a>  </li>
+              <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+              <li><a href="#"><i class="fa-brands fa-m"></i></a></li>
+              <li><a href="#"><i class="fa-brands fa-github"></i></a> </li>
+              <li><a href="#"> <i class="fa-solid fa-hand-peace"></i></a></li>
         </ul>
       </div>
       <button class="about-submit-btn" type="submit"><a href="#">Get my resume</a></button>
