--- a/index.html
+++ b/index.html
@@ -343,11 +343,15 @@
             </p>
             <div class="contact-form" >
               <form class="action-form" action="https://formspree.io/f/{form_id}" method="post">
+                <label for="name" class="form-label">Name:</label>
                 <input type="text" class="label first" id="name" name="firstname" placeholder="Yeremias" maxlength="30" required>
+                <label for="name-desktop" class="form-label">Name:</label>
                 <input type="text" class="label desktop" id="name-desktop" name="firstname" placeholder="Alexandra Loremipsum" maxlength="30" required>
+                <label for="email" class="form-label">Email:</label>
                 <input type="email" class="label email" id="email" name="email" placeholder="natajayanji4@gmail.com"  required>
+                <label for="email-desktop" class="form-label">Email:</label>
                 <input type="email" class="label desktop" id="email-desktop" name="email" placeholder="alexandra@gmail.com"  required>
-
+                <label for="subject" class="form-label">Subject:</label>
                 <textarea class="text-area" id="subject" name="subject" placeholder="Write your message here"  maxlength="500" required ></textarea>
                 <button class="submit-btn2">Get it Touch</button>
               </form>
