--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <ul class="nav-sub">
         <li class="list-item"> <a href="#portfolio" class="nav-link port">Portfolio</a></li>
           <li class="list-item"> <a href="#Aboutme" class="nav-link about">About</a></li>
-          <li class="list-item"> <a href="#Contactme" class="nav-link">Contact</a></li>
+          <li class="list-item"> <a href="#Contactme" class="nav-link cont">Contact</a></li>
       </ul>
       </div> 
 
