desktop styling popup

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CarenSiya's Portfolio</title>
+  <link rel="stylesheet" href="/assets/css/modal.css">
   <link rel="stylesheet" href="/assets/css/desktop-styling.css">
   <link rel="stylesheet" href="/assets/css/mobile.css">
   <link rel="stylesheet" href="/assets/css/modal.css">
@@ -188,7 +189,7 @@
     </div>
   </section> 
 
-  <section class="container-about" id="Aboutme">
+  <section class="container-about" >
     <div class="cardabout-skill">
     <div class="card-about">
       <div class="title-about">
@@ -298,8 +299,14 @@
         <ul class="card1-badges"></ul>
         <div class="image1modal"></div>
         <div class="description-text">
-        <div class="modalsIcon"></div>
-        <div class="links"></div>
+          <div class="text-para"></div>
+          <div class="links-lang">
+            <div class="modalsIcon"></div>
+            <div class="links">
+              <div class="link-button"></div>
+            </div>
+          </div>
+        
       </div>
     </div>
   </div>
