--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
             needs coding. I’d love to help with it
             </p>
             <div class="contact-form" >
-              <form class="action-form" action="https://formspree.io/f/{form_id}" method="post">
+              <form class="action-form" action="https://formspree.io/f/xpznvdkn" method="post">
                 <label for="name" class="form-label">Name:</label>
                 <input type="text" class="label first" id="name" name="firstname" placeholder="Yeremias" maxlength="30" required>
                 <label for="email" class="form-label">Email:</label>
