completed mobile styling

--- a/index.html
+++ b/index.html
@@ -300,10 +300,12 @@
         <h2 class="title1tonic"></h2>
         <ul class="card1-badges"></ul>
         <div class="image1modal"></div>
+        <div class="mobileimage"></div>
         <div class="description-text">
           <div class="text-para"></div>
           <div class="links-lang">
             <div class="modalsIcon"></div>
+            <div class="mobileIcons"></div>
             <div class="links">
               <div class="link-button"></div>
             </div>
