--- a/index.html
+++ b/index.html
@@ -91,13 +91,14 @@
   <section class="container">
     <div class="card one"></div>
     <div class="card two" ></div>
+    <div class="card three" ></div>
 
 
   
 
     <div class="card">
 
-      <img src="./images/image-3.png" alt="Facebook 360 project" class="image">
+      <!-- <img src="./images/image-3.png" alt="Facebook 360 project" class="image">
       <img src="./images/desktop-image3.png" alt="Facebook 360 project" class="desktop-image3">
       <div class="left-card1-block three">
         <h2 class="project-title">Facebook 360</h2>
@@ -142,7 +143,7 @@
             <button class="submit-btn desktop modal-btn" type="submit" onclick="modalPopupFunc()" >See Project</button>
             <div class="handcursor"><img src="./images/hand-cursor1.svg" alt="cursor hover"></div>
           </div>
-    </div>
+    </div> -->
   
     </div>
 
