fixed js errors

--- a/index.html
+++ b/index.html
@@ -95,11 +95,6 @@
     <div class="card four"></div>
 </section>
 
-  
-
-  
- 
-
   <section class="container-about" >
     <div class="cardabout-skill">
     <div class="card-about">
@@ -228,7 +223,7 @@
   <section>
     <div class="card-section"></div>
   </section>
-
+<h4 onclick="modalPopupFunc()"></h4>
 
     <script src="/assets/js/index.js"></script>
     <script src="/assets/js/script.js"></script>
