responsive local storage

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 <input type="email" class="label email" id="email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" placeholder="natajayanji4@gmail.com"  required>
                 <label for="subject" class="form-label">Subject:</label>
                 <textarea class="text-area" id="subject" name="subject" placeholder="Write your message here"  maxlength="500" required ></textarea>
-                <button class="submit-btn2">Get it Touch</button>
+                <button id="submit">Get it Touch</button>
               </form>
               <img src="./images/Shape.svg" class="img-form" id="image-form" alt="">
             </div>
