--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <section class="contanct-containter" id="Contactme">
       <footer class="contact-info">
         <div class="backgound-image mobile"></div>
-        <div class="backgound-image desktop"></div>
+        <div class="backgound-imageone desktopone"></div>
           <div class="contact-title">
             <h2 class="title2 desktop">Contact me</h2>
             <p class="contacts-info">
