correct url paths

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CarenSiya's Portfolio</title>
-  <link rel="stylesheet" href="/assets/css/modal.css">
-  <link rel="stylesheet" href="/assets/css/desktop-styling.css">
-  <link rel="stylesheet" href="/assets/css/mobile.css">
-  <link rel="stylesheet" href="/assets/css/modal.css">
+  <link rel="stylesheet" href="./assets/css/modal.css">
+  <link rel="stylesheet" href="./assets/css/desktop-styling.css">
+  <link rel="stylesheet" href="./assets/css/mobile.css">
+  <link rel="stylesheet" href="./assets/css/modal.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet" />
 
 </head>
@@ -225,8 +225,8 @@
   </section>
 <h4 onclick="modalPopupFunc()"></h4>
 
-    <script src="/assets/js/index.js"></script>
-    <script src="/assets/js/script.js"></script>
-    <script src="/assets/js/new.js"></script>
+    <script src="./assets/js/index.js"></script>
+    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/new.js"></script>
   </body>
 </html>
