Modified get my resume link

--- a/index.html
+++ b/index.html
@@ -122,7 +122,13 @@
               <li><a href="#"> <i class="fa-solid fa-hand-peace"></i></a></li>
         </ul>
       </div>
-      <button class="about-submit-btn" type="submit"><a href="#">Get my resume</a></button>
+      <a
+          class="primary-btn"
+          rel="noopener"
+          href="https://pdfhost.io/v/9i08Udc27_Carensiya_Resume"
+          target="_blank"
+          >Get my resume</a
+        >
     </div>
 
     <div class="lang">
