--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <header class="header">
         <nav class="header_nav">
           <div class="header_logo blue">
-            <a class="blue" href="#">Carensiya's Portfolio</a>
+            <a class="blue" href="#">Carensiya's</a>
           </div>
           <div class="header_menu">
             <img class="menu_icon" src="./images/menu-icon.svg" alt="menu" />
