Modify index.html styling path

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/assets/css/desktop-styling.css" />
+    <link rel="stylesheet" href="./assets/css/desktop-styling.css" />
     <title>CarenSiya</title>
   </head>
 
@@ -22,7 +22,7 @@
       <header class="header">
         <nav class="header_nav">
           <div class="header_logo blue">
-            <a class="blue" href="#">Carensiya's</a>
+            <a class="blue" href="#">Carensiya</a>
           </div>
           <div class="header_menu">
             <img class="menu_icon" src="./images/menu-icon.svg" alt="menu" />
