--- a/index.html
+++ b/index.html
@@ -294,6 +294,6 @@
         </section>
       </main>
     </div>
-    <script src="/assets/js/index.js"></script>
+    <script src="./assets/js/index.js"></script>
   </body>
 </html>
