Added a background image of myself

--- a/index.html
+++ b/index.html
@@ -62,20 +62,24 @@
         <section class="headline">
           <div class="headline_container">
             <h1 class="headline_title type-animation"></h1>
-            <p class="headline_content">
-              Greetings! I am a passionate software developer who takes great
-              delight in crafting innovative solutions that bring your ideas to
-              life. Whether it's an impressive product, a cutting-edge feature,
-              or a captivating website, I'm here to assist you every step of the
-              way. My diverse portfolio showcases a range of successful projects
-              and vast experience. Each project reflects my commitment to
-              excellence and my passion for creating impactful digital
-              solutions. If you find yourself drawn to my work and have a coding
-              project that requires finesse, please do not hesitate to reach
-              out. Together, let's turn your visions into reality! I'm excited
-              to collaborate and create meaningful solutions that leave a
-              lasting impact.
-            </p>
+            <div class="header-image">
+              <p class="headline_content">
+                Greetings! I am a passionate software developer who takes great
+                delight in crafting innovative solutions that bring your ideas to
+                life. Whether it's an impressive product, a cutting-edge feature,
+                or a captivating website, I'm here to assist you every step of the
+                way. My diverse portfolio showcases a range of successful projects
+                and vast experience. Each project reflects my commitment to
+                excellence and my passion for creating impactful digital
+                solutions. If you find yourself drawn to my work and have a coding
+                project that requires finesse, please do not hesitate to reach
+                out. Together, let's turn your visions into reality! I'm excited
+                to collaborate and create meaningful solutions that leave a
+                lasting impact.
+              </p>
+              <div><img src="./images/caren.jpeg" alt="caren" class="carenimg"></div>
+            </div>
+            
             <div class="headline_social">
               <h3 class="social_title blue">LET’S CONNECT</h3>
               <ul class="social_links">
