added more modifications

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <section class="headline">
           <div class="headline_container">
             <h1 class="headline_title type-animation"></h1>
-            <div class="header-image">
+            <div class="header_image">
               <p class="headline_content">
                 Greetings! I am a passionate software developer who takes great
                 delight in crafting innovative solutions that bring your ideas to
@@ -77,7 +77,7 @@
                 to collaborate and create meaningful solutions that leave a
                 lasting impact.
               </p>
-              <div><img src="./images/caren.jpeg" alt="caren" class="carenimg"></div>
+              <!-- <img src="./images/caren.jpeg" alt="caren" class="carenimg"> -->
             </div>
             
             <div class="headline_social">
